--- a/Server/ScoopenAPI/Web.config
+++ b/Server/ScoopenAPI/Web.config
@@ -11,6 +11,9 @@
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-APIAuthentication-20190428114016;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-APIAuthentication-20190428114016.mdf" />
     <add name="ScoopenDB" connectionString="data source=vhaash-dev-sql-server.database.windows.net;Initial Catalog=PrintShoppyDB;User ID=sql-server-admin;Password=Developer@2020;" />
+    <!--<add name="AgentRegistrationContext" connectionString="metadata=res://*/AgentRegistration.AgentInfo.csdl|res://*/AgentRegistration.AgentInfo.ssdl|res://*/AgentRegistration.AgentInfo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-P5MUKU1Q\SILVERLINK;initial catalog=_PrintShoppy;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="PrintShoppyDBEntities" connectionString="metadata=res://*/AgentRegistration1.AgentRegister.csdl|res://*/AgentRegistration1.AgentRegister.ssdl|res://*/AgentRegistration1.AgentRegister.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=vhaash-dev-sql-server.database.windows.net;initial catalog=PrintShoppyDB;persist security info=True;user id=sql-server-admin;password=Developer@2020;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -87,7 +90,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" />
-        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
@@ -126,4 +129,9 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
+    <!--<connectionStrings>
+    <add name="AgentRegistrationContext" connectionString="metadata=res://*/AgentRegistration.AgentInfo.csdl|res://*/AgentRegistration.AgentInfo.ssdl|res://*/AgentRegistration.AgentInfo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-P5MUKU1Q\SILVERLINK;initial catalog=_PrintShoppy;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+     </connectionStrings>-->
+   
+
 </configuration>
