add properise class1

--- a/Client/ScoopenUI/Web.config
+++ b/Client/ScoopenUI/Web.config
@@ -17,6 +17,13 @@
     <add key="ClientTimeOut" value="0:1:0:0" />
     <add key="Authentication" value="false" />
   </appSettings>
+
+
+  <system.net>
+    <defaultProxy>
+      <proxy usesystemdefault="False"/>
+    </defaultProxy>
+  </system.net>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
