--- a/Server/ScoopenAPIModals/ScoopenAPIModals.csproj
+++ b/Server/ScoopenAPIModals/ScoopenAPIModals.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Account\ActiveUser.cs" />
     <Compile Include="Account\LoginRequest.cs" />
+    <Compile Include="Demo\Class1.cs" />
     <Compile Include="GlobalConstants.cs" />
     <Compile Include="Notifications\LoginDetailsSmsRequest.cs" />
     <Compile Include="Notifications\SmsOtpRequest.cs" />
