--- a/Server/ScoopenAPI/Web.config
+++ b/Server/ScoopenAPI/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-APIAuthentication-20190428114016;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-APIAuthentication-20190428114016.mdf" />
     <add name="ScoopenDB" connectionString="data source=vhaash-dev-sql-server.database.windows.net;Initial Catalog=PrintShoppyDB;User ID=sql-server-admin;Password=Developer@2020;" />
+    <add name="UserRegisterDbEntities" connectionString="metadata=res://*/Account.UserRegister.UserInfo.csdl|res://*/Account.UserRegister.UserInfo.ssdl|res://*/Account.UserRegister.UserInfo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LENOVO-PC\SQLEXPRESS;initial catalog=PSDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
