--- a/Client/ScoopenModals/ScoopenModals.csproj
+++ b/Client/ScoopenModals/ScoopenModals.csproj
@@ -31,7 +31,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\..\Server\ScoopenAPIModals\bin\Debug\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="ScoopenAPIModals, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\GitHubData\PS\Server\ScoopenAPIModals\bin\Debug\ScoopenAPIModals.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,10 +50,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account\ActiveUser.cs" />
+    <Compile Include="Account\AdminRegisterModel.cs" />
     <Compile Include="Account\LoginRequest.cs" />
+    <Compile Include="Account\UserRegisterModel.cs" />
     <Compile Include="Notifications\LoginDetailsSmsRequest.cs" />
     <Compile Include="Notifications\SmsOtpRequest.cs" />
-    <Compile Include="Notifications\SmsOtpResponse.cs" />
+    <Compile Include="Account\SmsOtpResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Account\Role.cs" />
     <Compile Include="Account\User.cs" />
@@ -53,6 +63,9 @@
     <Compile Include="Account\UserInfo.cs" />
     <Compile Include="Account\UserResetPassword.cs" />
     <Compile Include="Account\UserRole.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
